PostGIS 3.0.2
2020/08/XX

* Bug Fixes and Enhancements *
  - Remove useless duplicated call in ST_ChangeEdgeGeom (Sandro Santilli)
  - #4709, Fix crash in adding edge to corrupted topology, (Sandro Santilli)
  - Handle non-closed edge rings by human readable error (Sandro Santilli)
  - #4706, Fix crash in ST_ChangeEdgeGeom on corrupted topology (Sandro Santilli)
  - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
  - #4661,4129, Fix access to spatial_ref_sys with a non default schema (Raúl Marín)
  - #4670, ST_AddPoint: Fix bug when a positive position is requested (Raúl Marín)
  - #4702, Legacy ST_Locate_Between_Measures is wrong (Kaplas80)
  - #4699, crash on null input to ST_Union(raster, otherarg) (Jaime Casanova, 2ndQuadrant)
  - #4716, Fix several issues with pkg-config in the configure script (Raúl Marín)
  - #4691, Fix segfault during gist index creation with empty geometries (Raúl Marín)
  - #4541, ST_ConcaveHull returns a "geometrycollection"
           type instead of the expected "polygon" (Regina Obe)

PostGIS 3.0.1
2020/02/20

* Breaking Changes *
  - #4637 svn number replaced by git hash in version output
    (Sandro Santilli, Regina Obe, Bas Couwenberg)

* New Features *
 - #4617, Add configure switch `--without-phony-revision` (Raúl Marín)
          Use to prevent postgis_revision.h from rebuilding
          (when building from tar ball) and building in a gitted folder.

* Bug Fixes and Enhancements *
  - #4558, Fix oversimplification of polygon inner rings (Raúl Marín)
  - #4588, Fix update when ST_Union(geometry) doesn't exist (Raúl Marín)
  - #4590, Fix pg_upgrade issue with ST_LineCrossingDirection (Raúl Marín)
  - #4599, ST_AddPoint: Accept -1 as a valid position (Raúl Marín)
  - #4600, Improve precision of ST_TileEnvelope (Raúl Marín)
  - #4605, Fix postgis_upgrade.pl with PostgreSQL 12 (Matti Linnanvuori)
  - #4606, Respect user's LDFLAGS in postgis module build (Sandro Santilli)