@@ -1,8 +1,8 @@
 PostGIS - Geographic Information Systems Extensions to PostgreSQL
 =================================================================
 
-:Version: 3.0.1
-:Date: 2020-02-20
+:Version: 3.0.2
+:Date: 2020-08-15
 :Website: https://postgis.net
 
 This distribution contains a module which implements GIS simple features, ties
