@@ -9,8 +9,8 @@ export OS_BUILD=64
 # export POSTGIS_MINOR_VERSION=2
 # export POSTGIS_MICRO_VERSION=0dev
 export PROJECTS=/var/lib/jenkins/workspace
-export GEOS_VER=3.6
-export GDAL_VER=2.2
+export GEOS_VER=3.8
+export GDAL_VER=3.0
 export WEB_DIR=/var/www/postgis_stuff
 export PATH="${PGPATH}/bin:$PATH"
 export LD_LIBRARY_PATH="${PROJECTS}/gdal/rel-${GDAL_VER}w${OS_BUILD}/lib:${PROJECTS}/geos/rel-${GEOS_VER}w${OS_BUILD}/lib:${PGPATH}/lib"
