@@ -20,9 +20,9 @@
 
       <answer>
         <para>There is a full length beginner tutorial <ulink url="http://trac.osgeo.org/postgis/wiki/WKTRasterTutorial01"> Intersecting vector buffers with large raster coverage using PostGIS Raster</ulink>.
-        Jorge has a series of blog articles on PostGIS Raster that demonstrate how to load raster data as well as cross compare to same tasks in Oracle GeoRaster. Check out
+        Jorge has a series of blog articles on PostGIS Raster that demonstrate how to load raster data as well as cross compare to same tasks in Oracle GeoRaster. Check out:
             <ulink url="http://gis4free.wordpress.com/category/postgis-raster/">Jorge's PostGIS Raster / Oracle GeoRaster Series</ulink>.
-            There is a whole chapter (more than 35 pages of content) dedicated to PostGIS Raster with free code and data downloads at <ulink url="https://www.manning.com/books/postgis-in-action-second-edition">PostGIS in Action - Raster chapter</ulink>.
+            There is a whole chapter (more than 35 pages of content) dedicated to PostGIS Raster with free code and data downloads at <ulink url="https://www.manning.com/books/postgis-in-action-third-edition">PostGIS in Action - Raster chapter. Also covered in second edition.</ulink>.
         You can <ulink url="http://www.postgis.us/page_buy_book">buy PostGIS in Action</ulink> now from Manning in hard-copy (significant discounts for bulk purchases) or just the E-book format.
         You can also buy from Amazon and various other book distributors. All hard-copy books come with a free coupon to download the E-book version.
         </para>
@@ -37,29 +37,8 @@
       </question>
 
       <answer>
-        <para>Starting with PostGIS 2.0 PostGIS Raster is fully integrated, so it will be compiled when you compile PostGIS.</para>
-	<para>Instructions for installing and running under windows are available at <ulink url="http://gis4free.wordpress.com/2011/03/10/how-to-install-and-configure-postgis-raster-on-windows/">How to Install and Configure PostGIS raster on windows</ulink></para>
-        <para>
-			If you are on windows, you can compile yourself, or use the <ulink
-            url="http://postgis.net/windows_downloads">pre-compiled
-            PostGIS Raster windows binaries</ulink>.
-			If you are on Mac OSX Leopard or Snow Leopard, there are binaries available at <ulink url="http://www.kyngchaos.com/software/postgres">Kyng Chaos Mac OSX PostgreSQL/GIS binaries</ulink>.
-		</para>
-		<para>For other platforms, install PostGIS from your software repository. For more details about compiling from source, please refer to <ulink url="http://trac.osgeo.org/postgis/wiki/WKTRaster/Documentation01#a2.3-CompilingandInstallingfromSources">Installing PostGIS Raster from source</ulink></para>
-      </answer>
-    </qandaentry>
-
-	 <qandaentry>
-      <question>
-        <para>I get error could not load library "C:/Program Files/PostgreSQL/8.4/lib/rtpostgis.dll": The specified module could not be found.
-	or could not load library on Linux when trying to run rtpostgis.sql</para>
-      </question>
-
-      <answer>
-        <para>rtpostgis.so/dll is built with dependency on libgdal.dll/so. Make sure for Windows you have libgdal-1.dll in the bin folder of your PostgreSQL install.
-        For Linux libgdal has to be in your path or bin folder.  </para>
-		<para>You may also run into different errors if you don't have PostGIS installed in your database.  Make sure to install PostGIS first in your
-		database before trying to install the raster support.</para>
+        <para>PostGIS Raster is part of the PostGIS codebase and generally available with most PostGIS binary distributions.  Starting with PostGIS 3.0, PostGIS raster is now a separate extension and requires:  `CREATE EXTENSION postgis_raster;` to enable it in your database. If you are compiling your own PostGIS, you will need to compile with GDAL otherwise postgis_raster extension will not be builit.</para>
+        <para>Refer to <ulink url="http://postgis.net/install/">Download PostGIS binaries</ulink> for popular distributions of PostGIS that include raster support.</para>
       </answer>
     </qandaentry>
 
@@ -92,7 +71,8 @@
 
       <answer>
         <para>Yes</para>
-		<para>GDAL has a PostGIS raster driver, but is only compiled in if you choose to compile with PostgreSQL support. </para>
+        <para>PostGIS raster has a function <xref linkend="RT_ST_AsGDALRaster" /> that will allow you to use SQL to export to any raster format supported by your GDAL.  You can get a list of these using the <xref linkend="RT_ST_GDALDrivers" /> SQL function.</para>
+		<para>You can also use GDAL commandline tools to export PostGIS raster to other formats. GDAL has a PostGIS raster driver, but is only compiled in if you choose to compile with PostgreSQL support. </para>
 		<para>The driver currently doesn't support irregularly blocked rasters,
 		although you can store irregularly blocked rasters in PostGIS raster data type.</para>
 		<para>If you are compiling from source, you need to include in your configure
@@ -119,20 +99,19 @@
 			Below are some using a where clause</para>
 		 <programlisting>gdal_translate -of PNG -outsize 10% 10% "PG:host=localhost port=5432 dbname='mygisdb' user='postgres' password='whatever' schema='someschema' table=sometable where='filename=\'abcd.sid\''" " C:\somefile.png</programlisting>
 		 <programlisting>gdal_translate -of PNG -outsize 10% 10% "PG:host=localhost port=5432 dbname='mygisdb' user='postgres' password='whatever' schema='someschema' table=sometable where='ST_Intersects(rast, ST_SetSRID(ST_Point(-71.032,42.3793),4326) )' " C:\intersectregion.png</programlisting>
-		 <para>To see more examples and syntax refer to <ulink url="http://trac.osgeo.org/gdal/wiki/frmts_wtkraster.html#a3.2-Readingrasterdatafromthedatabase">Reading Raster Data of PostGIS Raster section</ulink></para>
+		 <para>To see more examples and syntax refer to <ulink url="https://gdal.org/drivers/raster/postgisraster.html">Reading Raster Data of PostGIS Raster section</ulink></para>
       </answer>
     </qandaentry>
 
     <qandaentry>
 	<question><para>Are their binaries of GDAL available already compiled with PostGIS Raster suppport?</para></question>
 	<answer>
-		<para>Yes. Check out the page <ulink url="http://trac.osgeo.org/gdal/wiki/DownloadingGdalBinaries">GDAL Binaries</ulink> page.  Any compiled with PostgreSQL
-		support should have PostGIS Raster in them.  </para>
-		<para>PostGIS Raster is undergoing many changes.  If you want to get the latest nightly build for Windows -- then check out
+		<para>Yes. Check out the page <ulink url="https://gdal.org/download.html#binaries">GDAL Binaries</ulink> page.  Any compiled with PostgreSQL
+		support should have PostGIS Raster in them. GDAL tools is also generally included as part of <ulink url="https://qgis.org">QGIS</ulink>.</para>
+		<para>If you want to get the latest nightly build for Windows -- then check out
 		 the Tamas Szekeres  nightly builds built with Visual Studio which contain GDAL trunk, Python Bindings and MapServer executables and PostGIS Raster driver built-in.  Just
          click the SDK bat and run your commands from there.  <ulink url="www.gisinternals.com">http://www.gisinternals.com</ulink>.
 			Also available are VS project files.</para>
-			<para><ulink url="http://fwtools.maptools.org/">FWTools latest stable version for Windows is compiled with Raster support</ulink>.</para>
 	</answer>
     </qandaentry>
 
@@ -142,10 +121,10 @@
       </question>
 
       <answer>
-        <para>You can use MapServer compiled with GDAL 1.7+ and PostGIS Raster driver support to view Raster data. QGIS supports viewing of PostGIS Raster if you
+        <para>You can use <ulink url="https://mapserver.org/">MapServer</ulink> compiled with GDAL to view Raster data. QGIS supports viewing of PostGIS Raster if you
         have PostGIS raster driver installed.</para>
         <para>In theory any tool that renders data using GDAL can support PostGIS raster data or
-            support it with fairly minimal effort. Again for Windows, Tamas' binaries <ulink url="www.gisinternals.com">http://www.gisinternals.com</ulink> are a good choice if you don't want the hassle of having to setup to compile your own.</para>
+            support it with fairly minimal effort. Again for Windows, Tamas' binaries (includes Mapserver) <ulink url="www.gisinternals.com">http://www.gisinternals.com</ulink> are a good choice for windows users if you don't want the hassle of having to setup to compile your own.</para>
       </answer>
     </qandaentry>
 
@@ -156,9 +135,9 @@
 
       <answer>
         <para>First you need GDAL 1.7 or higher compiled with PostGIS raster support.
-            GDAL 1.8 or above is preferred since many issues have been fixed in 1.8 and more PostGIS raster issues fixed in trunk version.</para>
+            GDAL 3 or above is preferred since many issues have been fixed in 1.8 and more PostGIS raster issues fixed in trunk version.</para>
         <para>You can much like you can with any other raster.
-        Refer to <ulink url="http://mapserver.org/input/raster.html">MapServer Raster processing options</ulink>
+        Refer to <ulink url="https://mapserver.org/input/raster.html">MapServer Raster processing options</ulink>
         for list of various processing functions you can use with MapServer raster layers.</para>
         <para>What makes PostGIS raster data particularly interesting, is that since
 	each tile can have various standard database columns, you can segment it in your data source</para>
