@@ -1,0 +1,9 @@
+Style2;POLYGON((0.971135534320737 100.198164698777,0.973586221467386 100.198164698777,0.973586221467386 100.195714011631,0.971135534320737 100.195714011631,0.971135534320737 100.198164698777))
+Style2;POLYGON((0.973933293135374 100.198324208518,0.976383950436883 100.198324208518,0.976383950436883 100.195873551217,0.973933293135374 100.195873551217,0.973933293135374 100.198324208518))
+Style2;POLYGON((0.976731068363691 100.198483654947,0.979181695816038 100.198483654947,0.979181695816038 100.196033027495,0.976731068363691 100.196033027495,0.976731068363691 100.198483654947))
+Style2;POLYGON((0.971395384296088 100.196373137183,0.973845994625563 100.196373137183,0.973845994625563 100.193922526854,0.971395384296088 100.193922526854,0.971395384296088 100.196373137183))
+Style2;POLYGON((0.974193041210469 100.196532639711,0.976643621699466 100.196532639711,0.976643621699466 100.194082059222,0.974193041210469 100.194082059222,0.974193041210469 100.196532639711))
+Style2;POLYGON((0.976990714536086 100.196692078929,0.979441265180583 100.196692078929,0.979441265180583 100.194241528284,0.976990714536086 100.194241528284,0.976990714536086 100.196692078929))
+Style2;POLYGON((0.971655209404048 100.194581576034,0.97410574292519 100.194581576034,0.97410574292519 100.192131042513,0.971655209404048 100.192131042513,0.971655209404048 100.194581576034))
+Style2;POLYGON((0.97445276442771 100.194741071348,0.976903268113048 100.194741071348,0.976903268113048 100.192290567663,0.97445276442771 100.192290567663,0.97445276442771 100.194741071348))
+Style2;POLYGON((0.977250335860205 100.194900503356,0.979700809705705 100.194900503356,0.979700809705705 100.192450029511,0.977250335860205 100.192450029511,0.977250335860205 100.194900503356))
