@@ -1,0 +1,9 @@
+Style2;POLYGON((0.971135534320737 100.198164698777,0.973586221467386 100.198164698777,0.973586221467386 100.195714011631,0.971135534320737 100.195714011631,0.971135534320737 100.198164698777))
+Style2;POLYGON((0.973586221467386 100.199390042351,0.977262252187373 100.199390042351,0.977262252187373 100.195714011631,0.973586221467386 100.195714011631,0.973586221467386 100.199390042351))
+Style2;POLYGON((0.976036908614049 100.199390042351,0.979712939334036 100.199390042351,0.979712939334036 100.195714011631,0.976036908614049 100.195714011631,0.976036908614049 100.199390042351))
+Style2;POLYGON((0.971135534320737 100.196939355204,0.974811565040724 100.196939355204,0.974811565040724 100.193263324484,0.971135534320737 100.193263324484,0.971135534320737 100.196939355204))
+Style2;POLYGON((0.973586221467386 100.196939355204,0.977262252187373 100.196939355204,0.977262252187373 100.193263324484,0.973586221467386 100.193263324484,0.973586221467386 100.196939355204))
+Style2;POLYGON((0.976036908614049 100.196939355204,0.979712939334036 100.196939355204,0.979712939334036 100.193263324484,0.976036908614049 100.193263324484,0.976036908614049 100.196939355204))
+Style2;POLYGON((0.971135534320737 100.195714011631,0.974811565040724 100.195714011631,0.974811565040724 100.192037980911,0.971135534320737 100.192037980911,0.971135534320737 100.195714011631))
+Style2;POLYGON((0.973586221467386 100.195714011631,0.977262252187373 100.195714011631,0.977262252187373 100.192037980911,0.973586221467386 100.192037980911,0.973586221467386 100.195714011631))
+Style2;POLYGON((0.976036908614049 100.195714011631,0.979712939334036 100.195714011631,0.979712939334036 100.192037980911,0.976036908614049 100.192037980911,0.976036908614049 100.195714011631))
